Change History
==============

0.17 (unreleased)
-----------------


0.16 (2008-10-15)
-----------------

- Adjusted the Supervisord support to ignore the command sent to the script.
  This avoids a `positional arguments are not supported` error.
  [hannosch]

- The launch script now detects if it is being executed from Supervisord.
  This makes it more manageable for Supervisord since it no longer forks.
  [jvloothuis]


0.15 (2008-08-27)
-----------------

- Renamed zeoservice.py to zeoservice.py.in to avoid errors during egg
  creation, as it tries to compile the template file.
  [hannosch]


0.14 (2008-08-21)
-----------------

- Fix the test to not rely on a specific installation folder name.
  [dataflake]

- Added support for a unix socket path in `zeo-address` and expanded the
  test coverage for the `zeopack` script generation.
  [dataflake]

- Add support for ZEO authentication.
  [wichert]


0.13 (2008-03-27)
-----------------

- Fixed call to HandleCommandLine by computing the serviceClassString
  ourselves if our module name is not __main__ (ie, if it was imported
  from another module). This works around the fact that
  HandleCommandLine calls GetServiceClassString which in turn only
  calculates the full path if the original module is __main__.
  [sidnei]

- Fixed generation of runzeo.bat when using ZEO from egg, where ZConfig is not
  in ZODB3_HOME.
  [rochael]

- Only generate the Windows service scripts if there is a zope2-location, since
  it's currently the only place where the nt_svcutils can be found.
  [rochael]

- Fixed test breakages on Windows.
  [rochael]


0.12 (2008-03-02)
-----------------

- Fixed zeopack generation so it includes zope-location.
  [tarek]


0.11 (2008-02-19)
-----------------

- Made Python 2.3 compatible
  [fschulze]

- Added win32 specific scripts.
  [tarek]

- Added a `zeo-log-custom` option.
  [tarek]

- Added a test environement and a basic doctest to validate the recipe.
  [tarek]


0.10 (2008-01-09)