@@ -56,7 +56,7 @@ We should have a basic zeo.conf::
       level info
       <logfile>
         path /sample-buildout/var/log/zeo.log
-        format %(message)s
+        format %(asctime)s %(message)s
       </logfile>
     </eventlog>
     <BLANKLINE>
